2010-05-06  Benjamin Mack  <benni@typo3.org>

	* Fixed bug #14315: Filelist: AJAX bug with multiple file mounts in the folder tree
	* Fixed bug #12429: Renamed "t3lib_tstemplate::procesIncludes" to "processIncludes" due to a misspelling (Thanks to Bernhard Kraft)
	* Fixed bug #13996: Hardcoded TYPO3 logo shown in "HELP > About TYPO3" (Thanks to Stephan Kellermayr)
	* Fixed bug #13995: Hardcoded TYPO3 logo image shown in "HELP > About Modules" (Thanks to Stephan Kellermayr and Steffen Kamper)
	* Fixed bug #14291: TCEforms: Incorrect background color style in type fields with images (Thanks to Stefan Galinski)
	* Fixed bug #14316: Updated TYPO3_copyright_year in constants section of config_default.php (Thanks to Steffen Gebert)
	* Fixed bug #14217: options.pageTree.showPageIdWithTitle doesn't work in record picker and RTE (Thanks to Reinhard Fuehricht)

2010-05-06  Susanne Moog  <typo3@susanne-moog.de>

	* Fixed bug #14185: The tt_content.fe_groups field is not placed under the Access Tab (Thanks to Peter Klein & Lars Houmark)

2010-05-05  Benjamin Mack  <benni@typo3.org>

	* Fixed bug #12470: PHP-5.3 error: function define_syslog_variables() is deprecated (Thanks to Rupert Germann)
	* Followup to #13998 / #14298: Missing ">" in HTML source when including jsfunc.validateform.js (Thanks to Lars Houmark)

2010-05-05  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug #14295: Recycler and tcemain->process_cmdmap cannot undelete some records (thanks to Lars Houmark)
	* Fixed bug #14307: fe_user passwords are visible in the info popup window in the backend (thanks to Lars Houmark)

2010-05-04 Francois Suter  <francois@typo3.org>

	* Fixed bug #14255: Navigation title field should also be displayed on shortcuts page (thanks to Steffen Gebert)

2010-05-03  Susanne Moog  <typo3@susanne-moog.de>

	* Follow up to #5500: Load Inline Elements On Demand (thanks to Steffen Ritter)

2010-05-03  Benjamin Mack  <benni@typo3.org>

	* Release of TYPO3 4.4.0beta2
