@@ -1,5 +1,6 @@
 2010-05-06  Benjamin Mack  <benni@typo3.org>
 
+	* Fixed bug #14028: Code cleanup in class.t3lib_userauthgroup.php - part 1: foreach loops / variable renaming (Thanks to Kjeld Schumacher)
 	* Fixed bug #14315: Filelist: AJAX bug with multiple file mounts in the folder tree
 	* Fixed bug #12429: Renamed "t3lib_tstemplate::procesIncludes" to "processIncludes" due to a misspelling (Thanks to Bernhard Kraft)
 	* Fixed bug #13996: Hardcoded TYPO3 logo shown in "HELP > About TYPO3" (Thanks to Stephan Kellermayr)
